Add function for Search customers
